# neural_decode

./: README.md  appendix_ai.md  code_walkthrough.md  configuration.txt  description_of_repo.md  environment.yaml  environment.yml  llm_policy.md  pyproject.toml
additional_scripts/full_pipeline/: Project_Cognitive.ipynb  new_evaluation_visualization.ipynb  post_hoc_analysis.ipynb  study_saliency.ipynb  training_and_evaluation.ipynb
additional_scripts/quick_tutorials/: output.txt  quick_run.ipynb  quick_run.py
demo_code/: graphing_functions.py  main_application.py
demo_code/pages/: background.py  conclusions.py  experiment_and_design.py  explainability.py  training_performance.py
notebooks/: testing_script.ipynb
notebooks/quick_tutorials/: post_hoc_analysis.ipynb  training_and_evaluation.ipynb
results/embeddings/hopfield_only/: hopfield_umap_embeddings.npy  hopfield_umap_embeddings.npz.npy  hopfield_umap_labels.npy
results/embeddings/tf/: transformer_umap_all_labels.npy  transformer_umap_embeddings.npy  transformer_umap_embeddings.npz.npy
results/embeddings/tf_hopfield/: hopfield_umap_embeddings.npz.npy  tf_hopfield_umap_embeddings.npy
results/evaluations/: bad_example_of_pos.csv  good_example_of_pos.csv  hopfield.csv  hopfield_2.csv  t_hop_2.csv
results/models/: mlp_model.pth  transformer_model.pth
results/quick_run_results/: output.txt
results/saliency_maps/hopfield_only/: transformer_saliency_maps.npz.npy
results/saliency_maps/tf/: transformer_saliency_maps.npz.npy
src/neural_decode/models/: mlp.py  (+4 more)
tests/models/: test_hopfield_only.py
(+8 files in other folders)
