[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neural_decode"
version = "0.1.0"
description = "Scripts for Transformers versus Hopfield Networks for Neural Decoding Tasks"
authors = [
    { name = "Johannes Bauer", email = "you@email.com" }
]

readme = "README.md"
requires-python = ">=3.10.18"

dependencies = [
    "torch_brain",
    "streamlit",
    "matplotlib",
    "pandas",
    "numpy",
]